tests/negative/redeclaration.damn
[ Variable 'b' is already declared ]
DECLARE
    a, b, 
    b, c, d
BEGIN
    WRITE a;
END
